Arquivo Excel + Corrigindo bugs

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/DiscreteQueenProblem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.opencsv-3.8.jar=opencsv-3.8.jar
+file.reference.poi-3.15.jar=poi-3.15.jar
 file.reference.weblaf-complete-1.29.jar=weblaf-complete-1.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.weblaf-complete-1.29.jar}:\
-    ${file.reference.opencsv-3.8.jar}
+    ${file.reference.poi-3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
