--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/DiscreteQueenProblem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.2.jar=commons-math3-3.2.jar
 file.reference.poi-3.15.jar=poi-3.15.jar
 file.reference.weblaf-complete-1.29.jar=weblaf-complete-1.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.weblaf-complete-1.29.jar}:\
-    ${file.reference.poi-3.15.jar}
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.commons-math3-3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
